[package]
name = "adv_cases"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

pink-extension = { version = "0.4", default-features = false }
pink-utils = { version = "0.1", default-features = false }

[dev-dependencies]
pink-extension-runtime = { version = "0.4", default-features = false }

[lib]
name = "adv_cases"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-utils/std",
]
ink-as-dependency = []
