[package]
name = "qjs_test"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }
pink = { package = "pink-extension", version = "0.4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

phat_js = { path = "../../crates/js", default-features = false }
logging = { path = "../../crates/logging", default-features = false }

[lib]
name = "qjs_test"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pink/std",
    "scale/std",
    "scale-info/std",
    "phat_js/std",
    "logging/std",
]
ink-as-dependency = []
