[package]
name = "phat_js"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }
pink = { package = "pink-extension", version = "0.4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

logging = { path = "../logging", default-features = false }

[lib]
name = "phat_js"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "logging/std",
]
