[package]
name = "{{contract_name}}"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

serde = { version = "1.0.140", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4.0" }
pink-extension = { version = "0.5", default-features = false }

[dev-dependencies]
pink-extension-runtime = "0.4"

[lib]
name = "{{contract_name}}"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "serde-json-core/std",
]
ink-as-dependency = []